Modified to use a split button option selector for importing from file and URL